Three.js version

--- a/webxr/index.html
+++ b/webxr/index.html
@@ -5,11 +5,10 @@
     <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/aframe-xr@1.4.0/dist/aframe-xr.min.js"></script>
     <style>
-        .a-enter-vr-button {
-            top: 10px;
-            right: 10px; 
-            position: absolute;
-            z-index: 9999; 
+        .a-Venter-vr-button {
+            margin-top: 100px;
+            display:flex;
+            align-content: center;
         }
     </style>
     <script>
