--- a/node-server/public/teleop-demo.html
+++ b/node-server/public/teleop-demo.html
@@ -5,10 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AR Sphere</title>
-  <script
-    src="/static/aframe.js"></script>
-  <script src="/static/ar.js"></script>
-  <script type="module" src="/static/teleop-demo.js"></script>
+  <script src="./static/aframe.js"></script>
+  <script src="./static/ar.js"></script>
+  <script type="module" src="./static/teleop-demo.js"></script>
 
 
   <style>
@@ -42,19 +41,19 @@
 
   <a-scene embedded arjs="sourceType: webcam;" cursor="rayOrigin: mouse">
 
-    <a-entity cursor="fuse: true; fuseTimeout: 500" position="0 0 -1"
-      geometry="primitive: ring; radiusInner: 0.04; radiusOuter: 0.03" material="color: black; shader: flat">
+    <a-entity style="display: none;" cursor="fuse: true; fuseTimeout: 500; rayOrigin: mouse" position="0 0 -1"
+      geometry="primitive: ring; radiusInner: 0.1; radiusOuter: 1" material="color: black; shader: flat">
     </a-entity>
 
     <a-box id="s_lft" position="-1 1.5 -3" height="0.5" width="0.5" depth="0.5" color="#4CC3D9"></a-box>
-    <a-sphere id="stop" id="stop" class="clickable"  radius="0.3" position="0 1.5 -3"  color="red"
-    material="opacity: 1; metalness: 0.5;">
+    <a-sphere id="stop" id="stop" class="clickable" radius="0.3" position="0 1.5 -3" color="red"
+      material="opacity: 1; metalness: 0.5;">
     </a-sphere>
     <a-box id="s_rht" position="1 1.5 -3" height="0.5" width="0.5" depth="0.5" color="#4CC3D9"></a-box>
     <a-box id="s_fwd" position="0 2.5 -3" height="0.5" width="0.5" depth="0.5" color="#4CC3D9"></a-box>
     <a-box id="s_bwd" position="0 0.5 -3" height="0.5" width="0.5" depth="0.5" color="#4CC3D9"></a-box>
 
-   
+
 
   </a-scene>
 
