Updated racetrack in AR.JS

--- a/assetgen/index.html
+++ b/assetgen/index.html
@@ -4,41 +4,61 @@
     <meta charset="utf-8" />
     <title>AR Racetrack in A-Frame</title>
     <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
+    <style>
+      .a-enter-vr, .a-enter-ar {
+        position: fixed !important;
+        bottom: 20px !important;
+        transform: translateX(-50%) !important;
+      }
+
+      .a-enter-vr {
+        left: 50% !important;
+      }
+
+      .a-enter-ar {
+        left: 35% !important;
+      }
+    </style>
   </head>
   <body>
-    <a-scene>
-      <!-- Preload the racetrack model -->
+    <a-scene embedded arjs>
       <a-assets>
         <a-asset-item id="track" src="racing_track.gltf"></a-asset-item>
       </a-assets>
 
-      <!-- Lighting -->
       <a-light type="ambient" intensity="0.5"></a-light>
       <a-light type="directional" position="2 5 3" intensity="0.8"></a-light>
 
-      <!-- The area (plane) where the track will be placed -->
-      <a-box
-        id="trackArea"
-        position="0 0 0"
-        width="12"
-        height="0.1"
-        depth="12"
-        material="color: blue; opacity: 0.2; transparent: true"
-      >
-      </a-box>
-
-      <!-- Insert the racetrack model -->
       <a-entity
+        id="racetrack"
         gltf-model="#track"
-        position="0 0 0"
-        rotation="0 0 0"
-        scale="1 1 1"
+        position="0 0.05 -1.5" 
+        rotation="0 90 0"   
+        scale="0.5 0.5 0.5"
       ></a-entity>
 
-      <!-- Camera with cursor -->
-      <a-camera position="0 5 10">
+      <a-camera position="0 5 15">
         <a-cursor></a-cursor>
       </a-camera>
     </a-scene>
+
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        let arButton = document.querySelector(".a-enter-vr");
+        if (arButton) {
+          arButton.classList.add("a-enter-ar"); 
+        }
+      });
+
+      AFRAME.scenes[0].addEventListener("enter-ar", function () {
+        if (AFRAME.utils.device.isARCapable()) {
+          document.querySelector("#racetrack").setAttribute("scale", "0.3 0.3 0.3");
+        }
+      });
+
+      AFRAME.scenes[0].addEventListener("exit-ar", function () {
+        document.querySelector("#racetrack").setAttribute("scale", "1 1 1");
+      });
+    </script>
   </body>
 </html>
