--- a/trackgen/index.html
+++ b/trackgen/index.html
@@ -3,40 +3,144 @@
   <head>
     <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/dev/aframe/build/aframe-ar.js"></script>
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+
+      html, body {
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+      }
+
+      h1 {
+        color: white;
+        font-size: 1.5em;
+        position: absolute;
+        top: 10px;
+        width: 100%;
+        text-align: center;
+        z-index: 10;
+      }
+
+      p {
+        color: white;
+        font-size: 1em;
+        position: absolute;
+        top: 50px;
+        width: 100%;
+        text-align: center;
+        z-index: 10;
+      }
+
+      .d-pad {
+        position: absolute;
+        bottom: 100px;
+        left: 50%;
+        transform: translateX(-50%);
+        display: none;
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+      }
+
+      .d-row {
+        display: flex;
+        gap: 10px;
+      }
+
+      .d-button {
+        width: 60px;
+        height: 60px;
+        background-color: rgba(255, 255, 255, 0.6);
+        border: 2px solid white;
+        border-radius: 10px;
+        font-size: 20px;
+        font-weight: bold;
+        color: black;
+        text-align: center;
+        line-height: 60px;
+        cursor: pointer;
+      }
+
+      .d-button:active {
+        background-color: rgba(255, 255, 255, 0.9);
+      }
+
+      #stopButton {
+        position: absolute;
+        bottom: 20px;
+        left: 50%;
+        transform: translateX(-50%);
+        display: none;
+        background-color: rgba(255, 255, 255, 0.6);
+        color: white;
+        border: none;
+        border-radius: 10px;
+        padding: 15px 30px;
+        font-size: 18px;
+        font-weight: bold;
+        cursor: pointer;
+      }
+
+      #stopButton:active {
+        background-color: rgba(255, 255, 255, 0.6);
+      }
+    </style>
   </head>
   <body style="margin: 0; overflow: hidden;">
-    <a-scene embedded arjs>
-      
-      <a-marker id="marker" type="pattern" url="markers/pattern-marker_0.patt"></a-marker>
+    <a-scene embedded arjs="sourceType: webcam; trackingMethod: best;">
+      <a-marker
+        id="marker"
+        type="pattern"
+        url="markers/pattern-marker_0.patt"
+        smooth="true"
+        smoothCount="10"
+        smoothTolerance="0.01"
+        smoothThreshold="2">
+        <a-gltf-model
+          src="racing_track.gltf"
+          scale="1.5 1.5 1.5"
+          position="0 -10 -0.5"
+          rotation="0 90 0">
+        </a-gltf-model>
+      </a-marker>
 
-      <a-gltf-model
-        id="racetrack"
-        src="racing_track.gltf"
-        scale="0.5 0.5 0.5"
-        rotation="90 0 0"
-        visible="false">
-      </a-gltf-model>
+      <div class="d-pad" id="dPad">
+        <div class="d-button">⬆</div>
+        <div class="d-row">
+          <div class="d-button">⬅</div>
+          <div class="d-button">⬇</div>
+          <div class="d-button">➡</div>
+        </div>
+      </div>
+
+      <button id="stopButton">Stop</button>
 
       <a-entity camera></a-entity>
     </a-scene>
 
+
     <script>
       const marker = document.querySelector("#marker");
-      const model = document.querySelector("#racetrack");
+      const dPad = document.querySelector("#dPad");
+      const stopButton = document.querySelector("#stopButton");
 
-      let modelPlaced = false;
+      marker.addEventListener("markerFound", function() {
+        dPad.style.display = "flex";
+        stopButton.style.display = "block";
+      });
 
-      marker.addEventListener("markerFound", () => {
-        if (!modelPlaced) {
-          const markerPosition = marker.object3D.position.clone();
-          const markerRotation = marker.object3D.rotation.clone();
-
-          model.setAttribute("position", markerPosition);
-          model.setAttribute("rotation", { x: 90, y: 0, z: 0 });  
-          model.setAttribute("visible", true);
-
-          modelPlaced = true;
-        }
+      marker.addEventListener("markerLost", function() {
+        dPad.style.display = "none";
+        stopButton.style.display = "none";
       });
     </script>
   </body>
