--- a/trackgen/index.html
+++ b/trackgen/index.html
@@ -14,7 +14,7 @@
       <a-marker
         id="marker"
         type="pattern"
-        url="markers/pattern-marker_0.patt"
+        url="pattern-marker_0.patt"
         smooth="true"
         smoothCount="10"
         smoothTolerance="0.01"
