--- a/user-frontend/joystickCtrl.html
+++ b/user-frontend/joystickCtrl.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>On-Screen Joystick</title>
+  <script src="https://cdn.socket.io/4.8.1/socket.io.min.js" integrity="sha384-mkQ3/7FUtcGyoppY6bz/PORYoGqOl7/aSUMn2ymDOJcapfS6PHqxhRTMh1RR0Q6+" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
